@@ -87,6 +87,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * On reupload, add a null revision to the image description page
 * Group log output by date
 * Kurdish interface latin/arabic writing system with transliteration
+* Add number of links to Special:Whatlinkshere
 
 == Bugfixes since 1.10 ==
 
